fix middle ceasfire on mobile and desktop, miss final illu

--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ background: linear-gradient(180deg,rgba(106, 2, 1, 0) 0%, rgba(106, 2, 1, 1) 28%
 .ceasefire-layers {
   position: sticky;
   top: 0;
-  height: 100vh;
+  height: 70vh;
   width: 100%;
   /* overflow: hidden; */
 }
@@ -612,23 +612,34 @@ background: linear-gradient(180deg,rgba(106, 2, 1, 0) 0%, rgba(106, 2, 1, 1) 28%
     z-index: 1;
 }
 
-.flare { z-index: 2; width: 20%; }
-.sky  { z-index: 3; bottom: -50px; }
-.city { z-index: 1; bottom: 0; }
-.people { z-index: 4; bottom: 0; width: 80%; right: 100px; }
-.rock { z-index: 5; bottom: 0; }
-
-/* place flares in different starting X positions */
-.flare:nth-child(1) { left: 15%; }
-.flare:nth-child(2) { left: 35%; }
-.flare:nth-child(3) { left: 65%; }
-
-/* make flares glow */
 .flare {
+  z-index: 2;
+  width: 20%;
+  top: 300px;
   mix-blend-mode: screen;
   opacity: 0.9;
 }
 
+.sky  { z-index: 3; bottom: 8%; }
+.city { z-index: 1; bottom: 10%; }
+.people { z-index: 4; bottom: 10%; width: 80%; right: 100px; }
+.rock { z-index: 5; bottom: 10%; }
+
+/* place flares in different starting X positions */
+.flare:nth-child(1) {
+  left: 5%;
+    width: 30%;
+}
+
+.flare:nth-child(2) {
+  left: 25%;
+  width: 40%;
+ }
+
+.flare:nth-child(3) {
+    left: 70%;
+    width: 30%;
+  }
   
   
 
@@ -959,11 +970,53 @@ body {
     text-align: left;
   }
 
-  .layer-far { 
+  /* ceasfire section desktop */
+
+.layer-far { 
   z-index: 1;
   opacity: 0.9; 
   top: 0;
 }
+
+.sky  {
+  bottom: -50px;
+}
+
+.city {
+  bottom: 0;
+}
+
+.people { 
+  bottom: 0;
+  width: 80%;
+  right: 100px; 
+}
+
+.rock {
+  bottom: 0;
+}
+
+.flare {
+  top: 250px;
+}
+
+.flare:nth-child(1) {
+  left: 15%;
+    width: 20%;
+}
+
+.flare:nth-child(2) {
+  left: 35%;
+  width: 28%;
+ }
+
+.flare:nth-child(3) {
+    left: 75%;
+    width: 20%;
+  }
+  
+
+/* ending scene */
 
 .boat1 {
    left: 10%;
